refactor: 리뷰 피드백 반영 - 널 체크 중복 - 도메인 규칙 검증시 Assert 사용 - InvalidTokenException 생성자 체이닝 - 단순 조건 삼항 연산자로 처리